# gd3d11

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  Direct3D7Wrapper.sln  PrepareRedist.bat  README.md  push_to_github.bat  vcpkg.json
.github/actions/build-configuration/: action.yml
.github/actions/create-release/: action.yml
.github/actions/package-artifacts/: action.yml
.github/workflows/: build-and-conditional-release.yml
D3D11Engine/: AlignedAllocator.h  BaseAntTweakBar.cpp  BaseGraphicsEngine.h  BasicTimer.h  CGameManager.h  CMakeLists.txt  ConstantBufferStructs.h  D3D11AGS.cpp  D3D11AntTweakBar.cpp  D3D11CShader.cpp  D3D11CShader.h  D3D11CascadedShadowMapBuffer.cpp  D3D11CascadedShadowMapBuffer.h  D3D11ConstantBuffer.cpp  D3D11ConstantBuffer.h  D3D11DeferredRenderer.cpp  D3D11DeferredRenderer.h  D3D11Effect.cpp  D3D11Effect.h  D3D11Engine.vcxproj  D3D11Engine.vcxproj.filters  D3D11FileRelativeInclude.cpp  D3D11FileRelativeInclude.h  D3D11ForwardPlusRenderer.cpp  D3D11ForwardPlusRenderer.h  D3D11GShader.cpp  D3D11GShader.h  D3D11GraphicsEngine.cpp  D3D11GraphicsEngine.h  D3D11GraphicsEngineBase.cpp  D3D11GraphicsEngineBase.h  D3D11GraphicsShader.cpp  D3D11GraphicsShader.h  D3D11HDShader.cpp  D3D11HDShader.h  D3D11IndirectBuffer.cpp  D3D11IndirectBuffer.h  D3D11LegacyDeferredShading.cpp  D3D11LegacyDeferredShading.h  D3D11LineRenderer.cpp  (+172 more)
D3D11Engine/D3D7/: FakeDirectDrawSurface7.cpp  FakeDirectDrawSurface7.h  MyClipper.h  MyDirect3D7.h  MyDirect3DDevice7.h  MyDirect3DVertexBuffer7.h  MyDirectDraw.h  MyDirectDrawSurface7.cpp  MyDirectDrawSurface7.h
D3D11Engine/FidelityFXFrameGeneration/frameinterpolation/: ffx_frameinterpolation.cpp
D3D11Engine/FidelityFXFrameGeneration/opticalflow/: ffx_opticalflow.cpp
D3D11Engine/SMAA/: D3D11SMAA.cpp  D3D11SMAA.h
D3D11Engine/Shaders/: AtmosphericScattering.h  CS_AdvanceRain.hlsl  CS_LightCulling.hlsl  CS_PFX_DoF.hlsl  CS_PFX_DoF_Composite.hlsl  CS_PFX_DoF_FocusResolve.hlsl  CS_PFX_GodRayMask.hlsl  CS_PFX_GodRayZoom.hlsl  CS_PFX_SAO.hlsl  CS_PFX_SAO_Blur.hlsl  CS_PFX_Sharpen.hlsl  CS_TiledShading.hlsl  DS_Defines.h  Default_Tesselation.hlsl  DepthReconstruction.h  FFConstantBuffer.h  GS_Cubemap.hlsl  GS_VertexNormals.hlsl  Globals_VS_ExConstants.h  PNAEN_Tesselation.hlsl  PS_Atmosphere.hlsl  PS_AtmosphereGround.hlsl  PS_DS_AtmosphericScattering.hlsl  PS_DS_PointLight.hlsl  PS_DS_PointLightDynShadow.hlsl  PS_Diffuse.hlsl  PS_FP_ShadowMask.hlsl  PS_Grass.hlsl  PS_PFX_ApplyParticleDistortion.hlsl  PS_PFX_CAS.hlsl  PS_PFX_Composition.hlsl  PS_PFX_DistanceBlur.hlsl  PS_PFX_DoF.hlsl  PS_PFX_DoF_Composite.hlsl  PS_PFX_DoF_FocusResolve.hlsl  PS_PFX_FSR1_EASU.hlsl  PS_PFX_FSR1_RCAS.hlsl  PS_PFX_GammaCorrectInv.hlsl  PS_PFX_GodRayMask.hlsl  PS_PFX_GodRayZoom.hlsl  (+51 more)
D3D11Engine/Shaders/ASSAO/: ASSAO.hlsl
D3D11Engine/Shaders/FidelityFX/: ffx_common_types.h  ffx_core_hlsl.h
D3D11Engine/Shaders/FidelityFX/cas/: ffx_cas.h
D3D11Engine/Shaders/XeGTAO/: XeGTAO.hlsli
D3D11Engine/Shaders/include/: FFConstantBuffer.hlsl  ForwardPlusLighting.hlsl  PointLightShadows.h
D3D11Engine/include/ASSAO/: ASSAODX11.cpp
D3D11Engine/include/FidelityFX/host/: ffx_fsr1.h  ffx_fsr2.h  ffx_fsr3.h  ffx_fsr3upscaler.h  ffx_fx.h  ffx_types.h
D3D11Engine/include/FidelityFX/host/backends/dx11/: ffx_dx11.h
D3D11Engine/include/gtl/: gtl_base.hpp
D3D11Engine/include/tracy/public/: TracyClient.cpp
Launcher/: CMakeLists.txt  Launcher.vcxproj  ddraw.def  dllmain.cpp
blobs/Textures/: Moon.dds  bluenoise-rgba-512-bgra.dds  materials.json
blobs/Textures/Snowflakes/: Snow_0000.DDS  Snow_0001.DDS  Snow_0002.DDS  Snow_0003.DDS  Snow_0004.DDS  Snow_0005.DDS  Snow_0006.DDS  Snow_0007.DDS  Snow_0008.DDS  Snow_0009.DDS  Snow_0010.DDS  Snow_0011.DDS  Snow_0012.DDS  Snow_0013.DDS  Snow_0014.DDS  Snow_0015.DDS  Snow_0016.DDS  Snow_0017.DDS  Snow_0018.DDS  Snow_0019.DDS  Snow_0020.DDS  Snow_0021.DDS  Snow_0022.DDS  Snow_0023.DDS  Snow_0024.DDS  Snow_0025.DDS  Snow_0026.DDS  Snow_0027.DDS  Snow_0028.DDS  Snow_0029.DDS  Snow_0030.DDS  Snow_0031.DDS  Snow_0032.DDS  Snow_0033.DDS  Snow_0034.DDS  Snow_0035.DDS  Snow_0036.DDS  Snow_0037.DDS  Snow_0038.DDS  Snow_0039.DDS  (+216 more)
blobs/Textures/infos/: README.txt
cmake/: GD3D11Helpers.cmake  PrepareRedist.cmake  msvc-clang-linux.cmake
